--- a/python_tutorial.ipynb
+++ b/python_tutorial.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Python\n",
+    "\n",
+    "## 파이썬 리스트 \n",
+    "\n",
+    "1. 리스트는 배열의 정적 할당과 다르게 공간, 원소 모두 동적 할당하여, 장점은 유연하고, 단점은 시간이 오래걸린다. 배열을 쓰기 위해선 Numpy를 쓰면 된다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Python 3.12.1 documentation 참고"
    ]
   },
