--- a/python_tutorial.ipynb
+++ b/python_tutorial.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "# Python\n",
     "\n",
-    "## 파이썬 리스트 \n",
+    "## 파이썬 알아두기\n",
     "\n",
-    "1. 리스트는 배열의 정적 할당과 다르게 공간, 원소 모두 동적 할당하여, 장점은 유연하고, 단점은 시간이 오래걸린다. 배열을 쓰기 위해선 Numpy를 쓰면 된다."
+    "1. 리스트는 배열의 정적 할당과 다르게 공간, 원소 모두 동적 할당하여, 장점은 유연하고, 단점은 시간이 오래걸린다. 배열을 쓰기 위해선 Numpy를 쓰면 된다.\n",
+    "2. switch 문 고려, match case 아니면 딕셔너리 사용하기.\n",
+    "3. 할당 호출(Assignment) 고려"
    ]
   },
   {
