--- a/파이토치/파이토치.ipynb
+++ b/파이토치/파이토치.ipynb
@@ -2157,6 +2157,313 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torchvision import datasets\n",
+    "from torchvision.transforms import ToTensor, Lambda\n",
+    "\n",
+    "ds = datasets.FashionMNIST(\n",
+    "    root=\"data\",\n",
+    "    train=True,\n",
+    "    download=True,\n",
+    "    transform=ToTensor(),\n",
+    "    target_transform=Lambda(lambda y: torch.zeros(10, dtype=torch.float).scatter_(0, torch.tensor(y), value=1))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_transform = Lambda(lambda y: torch.zeros(\n",
+    "    10, dtype=torch.float).scatter_(dim=0, index=torch.tensor(y), value=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets, transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = (\n",
+    "    \"cuda\"\n",
+    "    if torch.cuda.is_available()\n",
+    "    else \"mps\"\n",
+    "    if torch.backends.mps.is_available()\n",
+    "    else \"cpu\"\n",
+    ")\n",
+    "print(f\"Using {device} device\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuralNetwork(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.linear_relu_stack = nn.Sequential(\n",
+    "            nn.Linear(28*28, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 10),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.flatten(x)\n",
+    "        logits = self.linear_relu_stack(x)\n",
+    "        return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NeuralNetwork(\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (linear_relu_stack): Sequential(\n",
+      "    (0): Linear(in_features=784, out_features=512, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=512, out_features=10, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = NeuralNetwork().to(device)\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted class: tensor([0], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = torch.rand(1, 28, 28, device=device)\n",
+    "logits = model(X)\n",
+    "pred_probab = nn.Softmax(dim=1)(logits)\n",
+    "y_pred = pred_probab.argmax(1)\n",
+    "print(f\"Predicted class: {y_pred}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 28, 28])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_image = torch.rand(3,28,28)\n",
+    "print(input_image.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 784])\n"
+     ]
+    }
+   ],
+   "source": [
+    "flatten = nn.Flatten()\n",
+    "flat_image = flatten(input_image)\n",
+    "print(flat_image.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 20])\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer1 = nn.Linear(in_features=28*28, out_features=20)\n",
+    "hidden1 = layer1(flat_image)\n",
+    "print(hidden1.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before ReLU: tensor([[ 0.1367,  0.3223, -0.0729,  0.6361, -0.5645, -0.4753,  0.1891, -0.7213,\n",
+      "          0.2005,  0.2489, -0.1145, -0.1822, -0.3886,  0.1291, -0.4644,  0.0502,\n",
+      "         -0.4228,  0.4517,  0.5534,  0.1950],\n",
+      "        [ 0.3554,  0.5724, -0.4531,  0.4381, -0.1165,  0.3181,  0.2758, -0.1520,\n",
+      "          0.0666,  0.1718, -0.0824, -0.1964, -0.2970,  0.3635, -0.1367,  0.1000,\n",
+      "         -0.0071,  0.2851,  0.7052,  0.3918],\n",
+      "        [ 0.3598,  0.3475, -0.5006,  0.1684, -0.0266, -0.1897,  0.0760, -0.4077,\n",
+      "          0.0728,  0.0204,  0.0856, -0.4619, -0.4671,  0.5560,  0.1043, -0.0166,\n",
+      "          0.0179,  0.1852,  0.3093,  0.1369]], grad_fn=<AddmmBackward0>)\n",
+      "\n",
+      "\n",
+      "After ReLU: tensor([[0.1367, 0.3223, 0.0000, 0.6361, 0.0000, 0.0000, 0.1891, 0.0000, 0.2005,\n",
+      "         0.2489, 0.0000, 0.0000, 0.0000, 0.1291, 0.0000, 0.0502, 0.0000, 0.4517,\n",
+      "         0.5534, 0.1950],\n",
+      "        [0.3554, 0.5724, 0.0000, 0.4381, 0.0000, 0.3181, 0.2758, 0.0000, 0.0666,\n",
+      "         0.1718, 0.0000, 0.0000, 0.0000, 0.3635, 0.0000, 0.1000, 0.0000, 0.2851,\n",
+      "         0.7052, 0.3918],\n",
+      "        [0.3598, 0.3475, 0.0000, 0.1684, 0.0000, 0.0000, 0.0760, 0.0000, 0.0728,\n",
+      "         0.0204, 0.0856, 0.0000, 0.0000, 0.5560, 0.1043, 0.0000, 0.0179, 0.1852,\n",
+      "         0.3093, 0.1369]], grad_fn=<ReluBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Before ReLU: {hidden1}\\n\\n\")\n",
+    "hidden1 = nn.ReLU()(hidden1)\n",
+    "print(f\"After ReLU: {hidden1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq_modules = nn.Sequential(\n",
+    "    flatten,\n",
+    "    layer1,\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(20, 10)\n",
+    ")\n",
+    "input_image = torch.rand(3,28,28)\n",
+    "logits = seq_modules(input_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "softmax = nn.Softmax(dim=1)\n",
+    "pred_probab = softmax(logits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model structure: NeuralNetwork(\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (linear_relu_stack): Sequential(\n",
+      "    (0): Linear(in_features=784, out_features=512, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=512, out_features=10, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "\n",
+      "\n",
+      "Layer: linear_relu_stack.0.weight | Size: torch.Size([512, 784]) | Values : tensor([[ 0.0030, -0.0171, -0.0034,  ...,  0.0078,  0.0065, -0.0087],\n",
+      "        [-0.0048, -0.0250, -0.0269,  ...,  0.0256,  0.0176,  0.0250]],\n",
+      "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.0.bias | Size: torch.Size([512]) | Values : tensor([0.0263, 0.0008], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.2.weight | Size: torch.Size([512, 512]) | Values : tensor([[ 0.0401, -0.0123,  0.0321,  ...,  0.0317, -0.0237,  0.0063],\n",
+      "        [ 0.0399, -0.0241,  0.0205,  ...,  0.0083,  0.0262, -0.0390]],\n",
+      "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.2.bias | Size: torch.Size([512]) | Values : tensor([0.0010, 0.0265], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.4.weight | Size: torch.Size([10, 512]) | Values : tensor([[-0.0385,  0.0011, -0.0433,  ..., -0.0420,  0.0399, -0.0084],\n",
+      "        [-0.0101,  0.0436,  0.0179,  ..., -0.0392,  0.0389,  0.0126]],\n",
+      "       device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n",
+      "Layer: linear_relu_stack.4.bias | Size: torch.Size([10]) | Values : tensor([-0.0337,  0.0284], device='cuda:0', grad_fn=<SliceBackward0>) \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Model structure: {model}\\n\\n\")\n",
+    "\n",
+    "for name, param in model.named_parameters():\n",
+    "    print(f\"Layer: {name} | Size: {param.size()} | Values : {param[:2]} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
