--- a/파이토치/파이토치.ipynb
+++ b/파이토치/파이토치.ipynb
@@ -2464,6 +2464,562 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "x = torch.ones(5)  # input tensor\n",
+    "y = torch.zeros(3)  # expected output\n",
+    "w = torch.randn(5, 3, requires_grad=True)\n",
+    "b = torch.randn(3, requires_grad=True)\n",
+    "z = torch.matmul(x, w)+b\n",
+    "loss = torch.nn.functional.binary_cross_entropy_with_logits(z, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient function for z = <AddBackward0 object at 0x7faf843e35e0>\n",
+      "Gradient function for loss = <BinaryCrossEntropyWithLogitsBackward0 object at 0x7faf843e3880>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Gradient function for z = {z.grad_fn}\")\n",
+    "print(f\"Gradient function for loss = {loss.grad_fn}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.0372, 0.1355, 0.3262],\n",
+      "        [0.0372, 0.1355, 0.3262],\n",
+      "        [0.0372, 0.1355, 0.3262],\n",
+      "        [0.0372, 0.1355, 0.3262],\n",
+      "        [0.0372, 0.1355, 0.3262]])\n",
+      "tensor([0.0372, 0.1355, 0.3262])\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss.backward()\n",
+    "print(w.grad)\n",
+    "print(b.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = torch.matmul(x, w)+b\n",
+    "print(z.requires_grad)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    z = torch.matmul(x, w)+b\n",
+    "print(z.requires_grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = torch.matmul(x, w)+b\n",
+    "z_det = z.detach()\n",
+    "print(z_det.requires_grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First call\n",
+      "tensor([[4., 2., 2., 2., 2.],\n",
+      "        [2., 4., 2., 2., 2.],\n",
+      "        [2., 2., 4., 2., 2.],\n",
+      "        [2., 2., 2., 4., 2.]])\n",
+      "\n",
+      "Second call\n",
+      "tensor([[8., 4., 4., 4., 4.],\n",
+      "        [4., 8., 4., 4., 4.],\n",
+      "        [4., 4., 8., 4., 4.],\n",
+      "        [4., 4., 4., 8., 4.]])\n",
+      "\n",
+      "Call after zeroing gradients\n",
+      "tensor([[4., 2., 2., 2., 2.],\n",
+      "        [2., 4., 2., 2., 2.],\n",
+      "        [2., 2., 4., 2., 2.],\n",
+      "        [2., 2., 2., 4., 2.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "inp = torch.eye(4, 5, requires_grad=True)\n",
+    "out = (inp+1).pow(2).t()\n",
+    "out.backward(torch.ones_like(out), retain_graph=True)\n",
+    "print(f\"First call\\n{inp.grad}\")\n",
+    "out.backward(torch.ones_like(out), retain_graph=True)\n",
+    "print(f\"\\nSecond call\\n{inp.grad}\")\n",
+    "inp.grad.zero_()\n",
+    "out.backward(torch.ones_like(out), retain_graph=True)\n",
+    "print(f\"\\nCall after zeroing gradients\\n{inp.grad}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import datasets\n",
+    "from torchvision.transforms import ToTensor\n",
+    "\n",
+    "training_data = datasets.FashionMNIST(\n",
+    "    root=\"data\",\n",
+    "    train=True,\n",
+    "    download=False,\n",
+    "    transform=ToTensor()\n",
+    ")\n",
+    "\n",
+    "test_data = datasets.FashionMNIST(\n",
+    "    root=\"data\",\n",
+    "    train=False,\n",
+    "    download=False,\n",
+    "    transform=ToTensor()\n",
+    ")\n",
+    "\n",
+    "train_dataloader = DataLoader(training_data, batch_size=64)\n",
+    "test_dataloader = DataLoader(test_data, batch_size=64)\n",
+    "\n",
+    "class NeuralNetwork(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.linear_relu_stack = nn.Sequential(\n",
+    "            nn.Linear(28*28, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 10),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.flatten(x)\n",
+    "        logits = self.linear_relu_stack(x)\n",
+    "        return logits\n",
+    "\n",
+    "model = NeuralNetwork()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 1e-3\n",
+    "batch_size = 64\n",
+    "epochs = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the loss function\n",
+    "loss_fn = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_loop(dataloader, model, loss_fn, optimizer):\n",
+    "    size = len(dataloader.dataset)\n",
+    "    # Set the model to training mode - important for batch normalization and dropout layers\n",
+    "    # Unnecessary in this situation but added for best practices\n",
+    "    model.train()\n",
+    "    for batch, (X, y) in enumerate(dataloader):\n",
+    "        # Compute prediction and loss\n",
+    "        pred = model(X)\n",
+    "        loss = loss_fn(pred, y)\n",
+    "\n",
+    "        # Backpropagation\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        if batch % 100 == 0:\n",
+    "            loss, current = loss.item(), batch * batch_size + len(X)\n",
+    "            print(f\"loss: {loss:>7f}  [{current:>5d}/{size:>5d}]\")\n",
+    "\n",
+    "\n",
+    "def test_loop(dataloader, model, loss_fn):\n",
+    "    # Set the model to evaluation mode - important for batch normalization and dropout layers\n",
+    "    # Unnecessary in this situation but added for best practices\n",
+    "    model.eval()\n",
+    "    size = len(dataloader.dataset)\n",
+    "    num_batches = len(dataloader)\n",
+    "    test_loss, correct = 0, 0\n",
+    "\n",
+    "    # Evaluating the model with torch.no_grad() ensures that no gradients are computed during test mode\n",
+    "    # also serves to reduce unnecessary gradient computations and memory usage for tensors with requires_grad=True\n",
+    "    with torch.no_grad():\n",
+    "        for X, y in dataloader:\n",
+    "            pred = model(X)\n",
+    "            test_loss += loss_fn(pred, y).item()\n",
+    "            correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
+    "\n",
+    "    test_loss /= num_batches\n",
+    "    correct /= size\n",
+    "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      "-------------------------------\n",
+      "loss: 2.302485  [   64/60000]\n",
+      "loss: 2.289888  [ 6464/60000]\n",
+      "loss: 2.273635  [12864/60000]\n",
+      "loss: 2.267367  [19264/60000]\n",
+      "loss: 2.243043  [25664/60000]\n",
+      "loss: 2.216518  [32064/60000]\n",
+      "loss: 2.228630  [38464/60000]\n",
+      "loss: 2.186136  [44864/60000]\n",
+      "loss: 2.191511  [51264/60000]\n",
+      "loss: 2.156363  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 46.3%, Avg loss: 2.152624 \n",
+      "\n",
+      "Epoch 2\n",
+      "-------------------------------\n",
+      "loss: 2.158847  [   64/60000]\n",
+      "loss: 2.151291  [ 6464/60000]\n",
+      "loss: 2.093947  [12864/60000]\n",
+      "loss: 2.114878  [19264/60000]\n",
+      "loss: 2.051437  [25664/60000]\n",
+      "loss: 1.996780  [32064/60000]\n",
+      "loss: 2.027594  [38464/60000]\n",
+      "loss: 1.942761  [44864/60000]\n",
+      "loss: 1.958354  [51264/60000]\n",
+      "loss: 1.871521  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 60.3%, Avg loss: 1.877337 \n",
+      "\n",
+      "Epoch 3\n",
+      "-------------------------------\n",
+      "loss: 1.910056  [   64/60000]\n",
+      "loss: 1.878112  [ 6464/60000]\n",
+      "loss: 1.762993  [12864/60000]\n",
+      "loss: 1.805329  [19264/60000]\n",
+      "loss: 1.681939  [25664/60000]\n",
+      "loss: 1.647107  [32064/60000]\n",
+      "loss: 1.666684  [38464/60000]\n",
+      "loss: 1.568915  [44864/60000]\n",
+      "loss: 1.600494  [51264/60000]\n",
+      "loss: 1.477933  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 62.0%, Avg loss: 1.505881 \n",
+      "\n",
+      "Epoch 4\n",
+      "-------------------------------\n",
+      "loss: 1.575587  [   64/60000]\n",
+      "loss: 1.539077  [ 6464/60000]\n",
+      "loss: 1.393080  [12864/60000]\n",
+      "loss: 1.460381  [19264/60000]\n",
+      "loss: 1.332320  [25664/60000]\n",
+      "loss: 1.345618  [32064/60000]\n",
+      "loss: 1.353888  [38464/60000]\n",
+      "loss: 1.281123  [44864/60000]\n",
+      "loss: 1.320825  [51264/60000]\n",
+      "loss: 1.207889  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 63.5%, Avg loss: 1.240659 \n",
+      "\n",
+      "Epoch 5\n",
+      "-------------------------------\n",
+      "loss: 1.319055  [   64/60000]\n",
+      "loss: 1.303848  [ 6464/60000]\n",
+      "loss: 1.139045  [12864/60000]\n",
+      "loss: 1.241414  [19264/60000]\n",
+      "loss: 1.106938  [25664/60000]\n",
+      "loss: 1.148454  [32064/60000]\n",
+      "loss: 1.165258  [38464/60000]\n",
+      "loss: 1.102038  [44864/60000]\n",
+      "loss: 1.147518  [51264/60000]\n",
+      "loss: 1.052583  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 64.6%, Avg loss: 1.079285 \n",
+      "\n",
+      "Epoch 6\n",
+      "-------------------------------\n",
+      "loss: 1.149807  [   64/60000]\n",
+      "loss: 1.158516  [ 6464/60000]\n",
+      "loss: 0.975200  [12864/60000]\n",
+      "loss: 1.108736  [19264/60000]\n",
+      "loss: 0.972244  [25664/60000]\n",
+      "loss: 1.018048  [32064/60000]\n",
+      "loss: 1.051294  [38464/60000]\n",
+      "loss: 0.989045  [44864/60000]\n",
+      "loss: 1.035368  [51264/60000]\n",
+      "loss: 0.956792  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 65.5%, Avg loss: 0.976734 \n",
+      "\n",
+      "Epoch 7\n",
+      "-------------------------------\n",
+      "loss: 1.033527  [   64/60000]\n",
+      "loss: 1.064967  [ 6464/60000]\n",
+      "loss: 0.864333  [12864/60000]\n",
+      "loss: 1.020956  [19264/60000]\n",
+      "loss: 0.889287  [25664/60000]\n",
+      "loss: 0.926213  [32064/60000]\n",
+      "loss: 0.977654  [38464/60000]\n",
+      "loss: 0.915242  [44864/60000]\n",
+      "loss: 0.957838  [51264/60000]\n",
+      "loss: 0.892277  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 66.8%, Avg loss: 0.907008 \n",
+      "\n",
+      "Epoch 8\n",
+      "-------------------------------\n",
+      "loss: 0.948238  [   64/60000]\n",
+      "loss: 0.999731  [ 6464/60000]\n",
+      "loss: 0.785031  [12864/60000]\n",
+      "loss: 0.958407  [19264/60000]\n",
+      "loss: 0.834248  [25664/60000]\n",
+      "loss: 0.859058  [32064/60000]\n",
+      "loss: 0.925424  [38464/60000]\n",
+      "loss: 0.864850  [44864/60000]\n",
+      "loss: 0.901500  [51264/60000]\n",
+      "loss: 0.845172  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 68.2%, Avg loss: 0.856510 \n",
+      "\n",
+      "Epoch 9\n",
+      "-------------------------------\n",
+      "loss: 0.882931  [   64/60000]\n",
+      "loss: 0.950329  [ 6464/60000]\n",
+      "loss: 0.725057  [12864/60000]\n",
+      "loss: 0.911256  [19264/60000]\n",
+      "loss: 0.794982  [25664/60000]\n",
+      "loss: 0.808112  [32064/60000]\n",
+      "loss: 0.885572  [38464/60000]\n",
+      "loss: 0.828885  [44864/60000]\n",
+      "loss: 0.859024  [51264/60000]\n",
+      "loss: 0.808444  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 69.5%, Avg loss: 0.817850 \n",
+      "\n",
+      "Epoch 10\n",
+      "-------------------------------\n",
+      "loss: 0.830394  [   64/60000]\n",
+      "loss: 0.910013  [ 6464/60000]\n",
+      "loss: 0.677608  [12864/60000]\n",
+      "loss: 0.874478  [19264/60000]\n",
+      "loss: 0.764895  [25664/60000]\n",
+      "loss: 0.768555  [32064/60000]\n",
+      "loss: 0.853116  [38464/60000]\n",
+      "loss: 0.801834  [44864/60000]\n",
+      "loss: 0.825748  [51264/60000]\n",
+      "loss: 0.778703  [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 70.7%, Avg loss: 0.786852 \n",
+      "\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "epochs = 10\n",
+    "for t in range(epochs):\n",
+    "    print(f\"Epoch {t+1}\\n-------------------------------\")\n",
+    "    train_loop(train_dataloader, model, loss_fn, optimizer)\n",
+    "    test_loop(test_dataloader, model, loss_fn)\n",
+    "print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torchvision.models as models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /home/sjt/.cache/torch/hub/checkpoints/vgg16-397923af.pth\n",
+      "100%|██████████| 528M/528M [00:09<00:00, 58.0MB/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "model = models.vgg16(weights='IMAGENET1K_V1')\n",
+    "torch.save(model.state_dict(), 'model_weights.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VGG(\n",
+       "  (features): Sequential(\n",
+       "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (3): ReLU(inplace=True)\n",
+       "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (6): ReLU(inplace=True)\n",
+       "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (8): ReLU(inplace=True)\n",
+       "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (11): ReLU(inplace=True)\n",
+       "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (13): ReLU(inplace=True)\n",
+       "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (15): ReLU(inplace=True)\n",
+       "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (18): ReLU(inplace=True)\n",
+       "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (20): ReLU(inplace=True)\n",
+       "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (22): ReLU(inplace=True)\n",
+       "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (25): ReLU(inplace=True)\n",
+       "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (27): ReLU(inplace=True)\n",
+       "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (29): ReLU(inplace=True)\n",
+       "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
+       "  (classifier): Sequential(\n",
+       "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Dropout(p=0.5, inplace=False)\n",
+       "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
+       "    (4): ReLU(inplace=True)\n",
+       "    (5): Dropout(p=0.5, inplace=False)\n",
+       "    (6): Linear(in_features=4096, out_features=1000, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = models.vgg16() # we do not specify ``weights``, i.e. create untrained model\n",
+    "model.load_state_dict(torch.load('model_weights.pth'))\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model, 'model.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = torch.load('model.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
