--- a/파이토치/이미지.ipynb
+++ b/파이토치/이미지.ipynb
@@ -18,6 +18,8 @@
    ],
    "source": [
     "import os\n",
+    "import time\n",
+    "import copy\n",
     "import torch\n",
     "from torch import nn\n",
     "import pandas as pd\n",
@@ -26,6 +28,12 @@
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision import transforms, utils\n",
+    "\n",
+    "import torch.nn.functional as F\n",
+    "from torch import optim\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# Ignore warnings\n",
     "import warnings\n",
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +71,69 @@
     "        if self.transform:\n",
     "            sample = self.transform(sample)\n",
     "        return sample, label\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_pathlist = os.listdir('')\n",
+    "train_pathlist = sorted(train_pathlist)\n",
+    "train_pathlist = [''+i for i in train_pathlist]\n",
+    "train_pathlist[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_labels = pd.read_csv('')\n",
+    "train_labels = list(train_labels['label'])\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "le.fit(train_labels)\n",
+    "\n",
+    "train_labels = le.transform(train_labels)\n",
+    "\n",
+    "train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Resize(256)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(train_pathlist, train_labels, test_size=0.33, stratify=train_labels, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data = CustomDataset(samples=X_train, labels=y_train, transform=train_transform)\n",
+    "test_data = CustomDataset(samples=X_test, labels=y_test, transform=train_transform)\n",
+    "\n",
+    "train_dataloader = DataLoader(training_data, batch_size=64, shuffle=True)\n",
+    "test_dataloader = DataLoader(test_data, batch_size=64, shuffle=True)"
    ]
   },
   {
