--- a/데이터분석/데이터분석.ipynb
+++ b/데이터분석/데이터분석.ipynb
@@ -62,6 +62,16 @@
     "'''\n",
     "데이터_경로 = ''\n",
     "\n",
+    "df = pd.read_csv(데이터_경로)\n",
+    "\n",
+    "df.head()\n",
+    "df.info()\n",
+    "df.describe()\n",
+    "df.skew()\n",
+    "df.kurtosis()\n",
+    "\n",
+    "\n",
+    "\n",
     "#\n",
     "\n",
     "\n",
