--- a/데이터분석/데이터분석.ipynb
+++ b/데이터분석/데이터분석.ipynb
@@ -1,6 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **데이터분석**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# python tqdm missingno numpy pandas matplotlib seaborn scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "환경\n",
+    "    라이브러리 로드\n",
+    "    데이터 불러오기\n",
+    "    인풋 아웃풋 경로 계획\n",
+    "\n",
+    "변수 분석\n",
+    "    각 변수 속성, 통계치, 왜도, 첨도, 분포 시각화\n",
+    "    변수 간 공분산, 상관성, 거리 시각화\n",
+    "\n",
+    "변수 처리\n",
+    "    결측값 처리\n",
+    "        제거\n",
+    "        대치\n",
+    "        보간\n",
+    "        다중 대치\n",
+    "    이상치 처리\n",
+    "        제거\n",
+    "        대치\n",
+    "    이산 -> 범주\n",
+    "        구간화\n",
+    "    범수 -> 이산\n",
+    "        가변수\n",
+    "    데이터 표준화, 정규화 스케일링\n",
+    "    파생변수\n",
+    "    언더샘플링, 오버샘플링\n",
+    "        SMOTE\n",
+    "\n",
+    "시간\n",
+    "    슬라이딩 윈도우\n",
+    "공간\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **환경**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -32,6 +95,7 @@
     "\n",
     "%matplotlib inline\n",
     "\n",
+    "import missingno as msno\n",
     "import seaborn as sns\n",
     "\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
@@ -56,13 +120,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# EDA 탐색적 데이터 분석\n",
-    "# Tabular\n",
+    "# 데이터 불러오기\n",
     "\n",
     "'''\n",
     "데이터_경로 = ''\n",
     "\n",
     "df = pd.read_csv(데이터_경로)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **각 변수 확인**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EDA 탐색적 데이터 분석\n",
+    "# Tabular\n",
+    "\n",
+    "'''\n",
     "\n",
     "df.head()\n",
     "df.info()\n",
